# litexpy

./: README.md  pyproject.toml  setup.py
src/litexpy/: __init__.py  _runner.py  runner.py
src/litexpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_runner_integration.py  test_runner_unit.py
