[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litexpy"
version = "0.0.2"
description = "Python runner for an interactive litex terminal session."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/litexlang/litexpy"

[tool.setuptools.packages.find]
where = ["src"]
